--- a/views/login.pug
+++ b/views/login.pug
@@ -39,7 +39,7 @@ block content
 
         .form-group
           .col-sm-offset-2.col-sm-3
-            button.btn-primary.btn(type="submit") Login
+            input.btn-primary.btn(type="submit", value="Login")
             |&nbsp;or&nbsp;
             +anchor("/", 'Cancel')
 
@@ -62,6 +62,6 @@ block content
 
         .form-group
           .col-sm-offset-2.col-sm-3
-            button.btn-primary.btn(type="submit") Login
+            input.btn-primary.btn(type="submit", value="Login")
             |&nbsp;or&nbsp;
             +anchor("/", 'Cancel')
