--- a/views/search.pug
+++ b/views/search.pug
@@ -13,9 +13,8 @@ block content
       if canSearch()
         form(action=`${proxyPath}/search`).search-form
           .input-group.input-group-sm
-            input.form-control(type="text", value=term_ph, data-i-search-input="true", name="term", placeholder="Search the wiki")
-            span.input-group-btn
-              button.btn.btn-primary(type="submit") Search
+            input(type="text", value=term_ph, data-i-search-input="true", name="term", placeholder="Search the wiki")
+            input.btn.btn-primary(type="submit", value="Search")
 
       if (term)
         h2 #{title} for&nbsp;
